[package]
name = "rust_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.10.0"
solana-client = "1.10.0"
solana-program = "1.7.14"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

